# Praktyczny_wstep_do_programowania

Lista 0/: hello_world.cpp
Lista 1/1.1/: logo.txt
Lista 1/1.2/: 1.2.depend  main.cpp
Lista 1/1.2_HelloWorld/: 1.2_HelloWorld.cbp
Lista 1/1.3/: 1.3.cbp  1.3.depend  main.cpp
Lista 1/1.4/: 3.depend  main.cpp
Lista 1/1.5/: 4.depend  main.cpp
Lista 2/2.1/: 2.1.cbp  2.1.depend  2.1.layout  main.cpp
Lista 2/2.2/: 2.2.layout  main.cpp
Lista 2/2.3/: 2.3.cbp  2.3.layout  main.cpp
Lista 2/2.4/: 2.4.cbp  2.4.depend  main.cpp
Lista 2/2.5/: 2.5.cbp  2.5.depend  2.5.layout  main.cpp
Lista 2/2.6/: 2.6.cbp  2.6.depend  2.6.layout  main.cpp
Lista 2/2.7/: 2.7.cbp  2.7.depend  2.7.layout  main.cpp
Lista 3/Zadanie 1/: Zadanie 1.depend  Zadanie 1.layout  main.cpp
Lista 3/Zadanie 2/: Zadanie 2.cbp  Zadanie 2.depend  main.cpp
Lista 3/Zadanie 3/: Zadanie 3.cbp  Zadanie 3.depend  main.cpp
Lista 3/Zadanie 4/: Zadanie 4.cbp  Zadanie 4.depend  Zadanie 4.layout  main.cpp
Lista 4/Zadanie 1/: Zadanie 1.depend  Zadanie 1.layout  main.cpp
Lista 4/Zadanie 2/: Zadanie 2.depend  Zadanie 2.layout  main.cpp  srednia.dat.txt
Lista 4/Zadanie 3/: Zadanie 3.cbp  Zadanie 3.depend  Zadanie 3.layout  main.cpp
Lista 4/Zadanie 5/: Zadanie 5.cbp  Zadanie 5.depend  Zadanie 5.layout  fib.dat.txt  lgn.dat.txt  main.cpp
Lista 5/Zadanie 1/: Zadanie 1.depend  Zadanie 1.layout  main.cpp
Lista 5/Zadanie 2/: Zadanie 2.depend  Zadanie 2.layout  main.cpp
Lista 6/: SFML_TEST.cbp  SFML_TEST.depend  main.cpp
Lista 7/Zadanie7_1/: Zadanie7_1.cbp  (+2 more)
Lista 8/: CMakeLists.txt  main.cpp
(+16 files in other folders)
